--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -271,12 +271,16 @@
         </activity>
         <activity android:name=".SharingActivity2"
             android:label="@string/sharing_activity"
+            android:icon="@drawable/app_icon_quadratic"
             android:exported="true"
             android:theme="@style/SharingActivityTheme"
-            android:launchMode="singleTop">
+            android:launchMode="singleTop"
+            android:directBootAware="true"
+            android:showForAllUsers="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <uses-library android:name="android.test.runner"/>
